feat: #226 Enhancing the Gateway fetching API to get health info
